# veda-server

./: .gitignore  README.md  build.sh  control-install.sh  control-stop.sh
conf/: veda.modules  veda.properties
ontology/: files_hashes.ron  veda-version.ttl
ontology/abstract-dictionary/: config-base.ttl  veda-abstract.ttl
ontology/abstract-dictionary/organization/: veda-organization-schema.ttl
ontology/generic-function/: veda-function-group-auth.ttl
public/js/server/: sha256.js  util.js
source/veda-auth/: Cargo.toml  README.md
source/veda-auth/doc/: API_REFERENCE.md  DOCUMENTATION.md  SMS_CONFIG.md
source/veda-auth/examples/: README.md  basic_usage.rs  configuration_example.rs  quick_start.rs  simple_client.rs  testing_example.rs
source/veda-auth/src/: auth.rs  common.rs  main.rs  mobile_auth.rs
source/veda-auth/tests/: auth_tests.rs  common_tests.rs  integration_tests.rs
source/veda-az-indexer/: Cargo.toml  README.md
source/veda-az-indexer/config/: az-indexer-tt.ini
source/veda-az-indexer/doc/: INDEXING_LOGIC.md
source/veda-az-indexer/src/: acl_cache.rs  common.rs  lib.rs  main.rs  tarantool_indexer.rs
source/veda-az-indexer/tests/: advanced_tests.rs  database_verification_tests.rs  integration_tests.rs  main_functions_tests.rs
source/veda-az-indexer/tests/common/: mod.rs
source/veda-bootstrap/: Cargo.toml
source/veda-bootstrap/src/: app.rs  check.rs  cli.rs  common.rs  main.rs  queue_check.rs
source/veda-ccus2/: Cargo.toml
source/veda-ccus2/src/: main.rs  queue_prepare.rs  shared_data.rs
source/veda-ft-indexer/: Cargo.toml
source/veda-ft-indexer/src/: index_workplace.rs  indexer.rs  main.rs
source/veda-ft-query/: Cargo.toml
source/veda-ft-query/src/: main.rs
source/veda-input-onto/: Cargo.toml
source/veda-input-onto/src/: main.rs
source/veda-mstorage/: Cargo.toml  EXAMPLES.md
source/veda-mstorage/src/: main.rs  transaction.rs
source/veda-mstorage/tests/: integration_tests.rs
source/veda-ontologist/: Cargo.toml
source/veda-ontologist/src/: main.rs
source/veda-queue-shard-distributor/: Cargo.toml  README.md
source/veda-queue-shard-distributor/config/: veda-queue-shard-distributor.ini
source/veda-queue-shard-distributor/src/: config.rs  load_balancer.rs  main.rs  nng_client.rs  worker_manager.rs
source/veda-queue2ids/: Cargo.toml
source/veda-queue2ids/src/: main.rs
source/veda-scripts-v8/: Cargo.toml
source/veda-scripts-v8/src/: command_handler.rs  main.rs  processor.rs  stat_file.rs
source/veda-sms-sender/: Cargo.toml  README.md  sms.ini
source/veda-sms-sender/config/: veda-sms-sender.ini
source/veda-sms-sender/src/: main.rs
source/veda-stat-collector/: Cargo.toml
source/veda-stat-collector/src/: main.rs  process_file.rs
source/veda-tools/src/: common.rs  main.rs  queue_tools.rs
source/veda-web-api/: Cargo.toml  build.rs  sms_auth.ini  transcription.toml
source/veda-web-api/config/: veda-web-api.ini
source/veda-web-api/doc/: SBIS_AUTH_CLIENT_EXAMPLE.md  SBIS_OAUTH_INTEGRATION.md
source/veda-web-api/doc/auth/: RSA_KEY_MANAGEMENT.md  SMS_AUTH_README.md  SMS_CLIENT_API_SPEC.md  SMS_FLOW_DIAGRAM.md
source/veda-web-api/src/: auth.rs  common.rs  files.rs  get.rs  main.rs  multifactor.rs  nlp_augment_text.rs  nlp_processing.rs  nlp_transcription.rs  query.rs  sbis_auth.rs  sms_auth.rs  sparql_client.rs  update.rs  user_activity.rs  vql_query_client.rs  webdav.rs
source/veda-web-api/tools/: generate_rsa_key.sh
