[package]
name = "veda-auth"
version = "0.1.5"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2024"

[dependencies]
nng = "1.0.1"
chrono = "0.4"
log = "0.4"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.9.3"
rand = "0.7.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
parse_duration = "2.1.1"
ring = "0.16.20"
data-encoding = "2.4.0"
mustache = "0.9.0"
git-version = "0.3.9"
version = "3.0.0"

#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"]}
v_common = { package = "v-common", version = "=0.13.8", features = ["tokio_0_2", "tt_2", "awc_2"] }
v-individual-model = "0.1.1"

[profile.release]
opt-level = 1

