[package]
name = "veda-az-indexer"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"
chrono = "0.4.24"

v_common = { package = "v-common", version = "=0.9.0" }
#v_common = { package = "v-common", path = "../../../v-common" }
