[package]
name = "veda-az-indexer"
version = "0.1.5"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"
chrono = "0.4.24"
rust-ini = "0.18"
parse_duration = "2.1.1"
humantime = "2.1.0"

v_common = { package = "v-common", version = "=0.10.6" }
#v_common = { package = "v-common", path = "../../../v-common" }
