[package]
name = "veda-az-indexer"
version = "0.1.7"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
version = "3.0.0"
git-version = "0.3.9"
chrono = "0.4.24"
rust-ini = "0.18"
parse_duration = "2.1.1"
humantime = "2.1.0"

#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"]}
v_common = { package = "v-common", version = "=0.14", features = ["tokio_0_2", "tt_2", "awc_2"] }

#v_storage = { package = "v-storage", path = "../../../v-common/v-storage" }
v-storage = "0.1.0"
v-individual-model = "0.1.1"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 1
