[package]
name = "veda-bootstrap"
version = "0.1.4"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
sysinfo = "0.18"
parse_duration = "2.1.1"
nix = "0.26.1"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
reqwest = "0.11"
futures = "0.3.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rust-ini = "0.18"
v_queue = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

v_common = { package = "v-common", version = "=0.17.3", features = ["tokio_0_2", "tt_2", "awc_2"] }
#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"]}

v-individual-model = "0.2.3"
#v-individual-model = { package = "v-individual-model", path = "../../../v-individual-model"}


