[package]
name = "veda-ccus2"
version = "0.2.2"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2021"

[[bin]]
name = "veda-ccus2"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
env_logger = "0.10"
scan_fmt = "0.2"
log = "0.4"
rand = "0.8"
ws = "0.9.2"
time = "0.3.17"
#evmap = "10.0.2"
thiserror = "1.0.37"

v_common = { package = "v-common", version = "=0.17.6", features = ["tokio_0_2", "tt_2", "awc_2"] }
#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"]}

v-individual-model = "0.2.6"
#v-individual-model = { package = "v-individual-model", path = "../../../v-individual-model"}

v-storage = "0.1.1"
