[package]
name = "veda-ft-indexer"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"

xapian-rusty = "=0.0.56"
#xapian-rusty = { path = "../xapian-rusty" }

v_common = { package = "v-common", version = "=0.17.6", features = ["tokio_0_2", "tt_2", "awc_2"] }
#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"] }

v-individual-model = "0.2.6"
v-storage = "0.1.1"

[profile.release]
opt-level = 1
