[package]
name = "veda-mstorage"
version = "0.1.3"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
nng = "1.0"
serde_json = "1.0"
chrono = "0.4"
url = "2.3.1"

version = "3.0.0"
git-version = "0.3.9"

v_common = { package = "v-common", version = "=0.10.13" }
#v_common = { package = "v-common", path = "../../../v-common" }
