[package]
name = "veda-mstorage"
version = "0.1.4"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
nng = "1.0"
serde_json = "1.0"
chrono = "0.4"
url = "2.3.1"
version = "3.0.0"
git-version = "0.3.9"

v_common = { package = "v-common", version = "=0.17.0", features = ["tokio_0_2", "tt_2", "awc_2"] }
#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"]}

v-individual-model = "0.2.0"
#v-individual-model = { package = "v-individual-model", path = "../../../v-individual-model"}

v-storage = "0.1.1"
#v-storage = { package = "v-storage", path = "../../../v-storage"}

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 1
