[package]
name = "veda-ontologist"
version = "0.1.1"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2021"

[[bin]]
name = "veda-ontologist"
path = "src/main.rs"

[dependencies]
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"

v_common = { package = "v-common", version = "=0.17.6", features = ["tokio_0_2", "tt_2", "awc_2"] }
#v_common = { package = "v-common", path = "../../../v-common", features = ["tokio_0_2", "tt_2", "awc_2"] }

v-individual-model = "0.2.6"
v-storage = "0.1.1"

[profile.release]
opt-level = 1
