[package]
name = "veda-queue-shard-distributor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veda-queue-shard-distributor"
path = "src/main.rs"

[dependencies]
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "3.0"
version = "3.0.0"
git-version = "0.3.9"

v_common = { package = "v-common", version = "=0.17.1", features = ["tokio_0_2", "tt_2", "awc_2"] }

v-individual-model = "0.2.1"
#v-individual-model = { package = "v-individual-model", path = "../../../v-individual-model"}

v-storage = "0.1.2"
#v-storage = { package = "v-storage", path = "../../../v-storage"}

[profile.release]
opt-level = 1
