[package]
name = "veda-scripts-v8"
version = "0.1.3"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
rust_decimal = "1.7.0"
align-data = "0.1.0"
scan_fmt = "0.2.6"
version = "3.0.0"
git-version = "0.3.9"
zip = "2.1.3"
signal-hook = "0.3.15"
nng = "1.0"

v_v8 = { package = "v-common-v8", version = "=0.1.132" }
#v_v8 = { package = "v-common-v8", path = "../../../v-common-v8" }

[profile.relese]
opt-level = 1