[package]
name = "veda-web-api"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = { version = "3",  features=["openssl"]}
actix-service = "1"
actix-rt = "1"
actix-files = "0.5.0"
actix-web-static-files = "3"
actix-multipart = "0.3"
async-std = "1.11.0"
futures = "0.3.25"
sanitize-filename = "0.3"
awc = { version = "2.0.3", features = ["openssl"] }
openssl = "0.10"
reqwest = { version = "0.10", features = ["json"] }

rusty_tarantool = "0.2.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#actix-rt = "1"
rmp = "^0.8"
rmp-serialize = "0.8.0"
chrono = "0.4"
num = "0.2.1"
num-traits = "0.2.11"
rust_decimal = "=1.32.0"
bincode = "1.2.1"
derivative = "2.1.1"
log = "0.4"
lmdb-rs-m = "0.7.7"
lazy_static = "1.4"
nng = "1.0.0"
nanoid = "0.3.0"
evmap = "10.0.2"
crc32fast = "1.2.0"
scan_fmt = "0.1.3"
base64 = "0.13.0"
url = "2.3.1"
filetime = "0.2.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
urlencoding = "2.1.0"
num_cpus = "1.13.1"
regex = "1.7.1"
stopwatch = "0.0.7"

xml-rs = "0.8"
mime = "0.3"
mime_guess = "2.0"
content_inspector = "0.2"
chardetng = "0.1"
rsa = "0.5"
rand = "0.8"
pem = "0.8"
actix-cors = "0.5"
jsonwebtoken = "9.2.0"
sha2 = "0.10"
rust-ini = "0.20.0"
basen = "0.1.0"

strum = "0.26"
strum_macros = "0.26"
version = "3.0.0"
git-version = "0.3.9"

v_common = { package = "v-common", version = "=0.6.14" }
#v_common = { package = "v-common", path = "../../../v-common" }
